--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-05-09 Magnus Hagdorn
+ * piccolo3/utils/PiccoloProcessedData.py: only apply correction when
+   available
+
 2019-05-08 Magnus Hagdorn
  * piccolo3/readpicco.py: add option to read calibration files
  * piccolo3/utils/PiccoloProcessedData.py: apply radiometric calibration
