--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2019-05-11 Magnus Hagdorn
+ * port wavelength calibration code to piccolo3
+
 2019-05-09 Magnus Hagdorn
  * piccolo3/utils/PiccoloProcessedData.py: only apply correction when
    available
