--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 2019-11-17 Magnus Hagdorn
+ * piccolo3/readpicco.py: add option to use original wavelength coefficients;
+   add option to include saturated spectra
+ * piccolo3/utils/PiccoloProcessedData.py: optionally use original
+   coefficients; drop saturated spectra by default
+
+2019-11-17 Magnus Hagdorn
  * README.md: document new program
  * setup.py: install new program
  * piccolo3/discard_saturated.py: add program to sort piccolo files into
