--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-piccolo3-utils (0.1-1) unstable; urgency=medium
+piccolo3-utils (0.1-1) piccolo; urgency=medium
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release
 
  -- Magnus Hagdorn <magnus.hagdorn@ed.ac.uk>  Wed, 28 Apr 2021 12:39:28 +0100
